Made some changes and changed files extension

--- a/todo.txt
+++ b/todo.txt
@@ -63,10 +63,29 @@ on channel click visit users channel
 
 sort comments
 make comments editable-------------------
-like and unlike comments
+like and unlike comments---------------------
 admin can heart the comment
 pin the comment
 reply the comment
 notify the user
-delete the comment
+delete the comment-------------------------
 delte reply
+
+
+
+
+
+
+
+if channel exists then link
+
+
+like or dislike error
+
+
+accordion
+
+
+
+
+empty comment can't pass
